--- a/asm/Makefile
+++ b/asm/Makefile
@@ -19,7 +19,7 @@ all: $(BINS)
 
 %.elf: %.o
 	$(LD) $(LDFLAGS) -Ttext 0x80100000 -o $@ $^
-	$(OBJDUMP) -alD $@ > test.s
+	$(OBJDUMP) -alD $@ > test.asm
 
 %.o: %.s
 	$(CC) $(CFLAGS) -x assembler-with-cpp -c -o $@ $^
